[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Data/GUI/GUIPanels/ObjectButton.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.196078, 1, 0.196078, 0.235294 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0784314, 0.117647, 0.352941, 0.588235 )
border_color = Color( 0.823529, 0.823529, 0.447059, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.117647, 0.117647, 0.705882, 0.0588235 )
corner_radius_top_left = 10
corner_radius_bottom_right = 10

[sub_resource type="DynamicFont" id=5]
size = 14
outline_color = Color( 0.0470588, 0.658824, 0.117647, 1 )
extra_spacing_space = 2
font_data = ExtResource( 1 )

[node name="Button" type="Button"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 150 )
focus_mode = 0
mouse_filter = 1
size_flags_horizontal = 3
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
disabled = true
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
yellow = Color( 0.823529, 0.823529, 0.447059, 1 )
white = Color( 1, 1, 1, 1 )

[node name="Icon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.78125, 0.78125 )
rect_pivot_offset = Vector2( 32, 64 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.823529, 0.823529, 0.447059, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
[connection signal="toggled" from="." to="." method="_on_Button_toggled"]
